Created new section on reconfiguring VMs; edited add and remove disk sections to include RHV as well as VMware; added new sections on reconfiguring processor and memory

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Removing_a_VM_disk.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Removing_a_VM_disk.adoc
@@ -1,7 +1,7 @@
 [[Removing_a_VM_disk]]
-= Removing a Disk from a Virtual Machine (VMware Virtual Machines Only)
+= Removing a Virtual Machine Disk
 
-A disk can be removed from a VMware virtual machine with the following steps:
+A disk can be removed from a VMware or Red Hat Virtualization virtual machine with the following steps:
 
 . Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Select the target virtual machine.
