--- a/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
@@ -4,7 +4,7 @@
 The heterogeneous virtual machine container and guest support combined with the ability to analyze information inside the virtual machine - such as disk space, patch level or installed applications - provides in-depth information across the virtual environment.
 This rich set of information enables {product-title} users to improve problem resolution times and effectively manage virtual machines.
 
-The *Virtual Machines* pages display all virtual machines that were discovered by your Server.
+The *Virtual Machines* pages display all virtual machines that were discovered by your server.
 Note that if you have applied a filter to a user, it will be in effect here.
 The *Virtual Machines* taskbar is a menu driven set of buttons that provide access to functions related to virtual machines.
 
@@ -313,11 +313,7 @@ include::To_view_disk_information.adoc[]
 
 
 :leveloffset: 2
-include::Adding_a_VM_disk.adoc[]
-
-
-:leveloffset: 2
-include::Removing_a_VM_disk.adoc[]
+include::Reconfiguring_VMs.adoc[]
 
 
 :leveloffset: 2
