added new sections on managing RHEV virtual machine snapshots, including create, delete, and revert.

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
@@ -326,6 +326,8 @@ include::To_view_event_logs.adoc[]
 :leveloffset: 2
 include::VNC_and_SPICE_consoles.adoc[]
 
+:leveloffset: 2
+include::Snapshots.adoc[]
 
 
 
