Added a section ID to one of the sections in General Configuration.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2177,7 +2177,7 @@ For a list of what each pre-defined account role can do, see xref:roles[].
 To assign account roles using LDAP groups, see xref:ldap_groups[].
 ======
 
-
+[[creating-a-user-group]]
 ==== Creating a User Group
 
 To create a user group:
