WIP:Added a note about the cockpit integration in the SSUI. (The actual button is still not available in the SSUI)

--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -14,6 +14,8 @@ Moreover, you can now add custom buttons and custom button groups that can have 
 
 image:SSUI_Custom_Button1.png[]
 
+CloudForms now also has the ability for users to click a new image:SSUI_Cockpit-Button.png[Cockpit Button] button that opens a new browser window with Cockpit interface for a given virtual machine. Note this requires that Cockpit is pre-configured and running on the virtual machine. 
+
 
 
 
