Added more content on Cockpit integration, teamed with screen captures

--- a/doc-Introduction_to_Self_Service_Portal/topics/Navigating_Self_Service_UI.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/Navigating_Self_Service_UI.adoc
@@ -14,7 +14,7 @@ There are several options in the top-right corner of the user interface, includi
 
 [NOTE]
 ====
-Clicking on the arrow icon (image:SSUI_popout_arrow.png[Popout Arrow]) at the top of the user interface will take you to the full administrative user interface login page, in a new browser window/tab.
+Clicking on the arrow icon image:SSUI_popout_arrow.png[Popout Arrow] at the top of the user interface will take you to the full administrative user interface login page, in a new browser window/tab.
 ====
 
 image:SSUI_Change_Group.png[Change Group]
