--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -14,8 +14,21 @@ Moreover, you can now add custom buttons and custom button groups that can have 
 
 image:SSUI_Custom_Button1.png[]
 
-CloudForms now also has the ability for users to click a new image:SSUI_Cockpit-Button.png[Cockpit Button] button that opens a new browser window with Cockpit interface for a given virtual machine. Note this requires that Cockpit is pre-configured and running on the virtual machine. 
+=== Cockpit Integration
 
+Cockpit is an interactive Linux server admin interface. You can perform simple administration tasks such as starting containers, storage administration, network configuration, inspecting logs and so on. While cockpit allows you to monitor and administer several servers at the same time, your browser connects to a primary server that runs the Cockpit web service through which connections to additional servers can be established.
 
+{product-title} full administrative user interface and the Self Service user interface have enabled for users to click the new Cockpit button image:SSUI_Cockpit-Button.png[Cockpit Button] that opens a new browser window with Cockpit interface for a given virtual machine. 
 
+[NOTE]
+====
+Cockpit must be pre-configured and running on the virtual machine. 
+====
 
+If you get a security warning by the browser, you will need to add this connection to the security exceptions. Click *Advanced → Add Exception → Confirm Security Exception*. After that, you will see the login screen.
+
+image:Cockpit_Login.png[Cockpit Login]
+
+Once you have logged in, you will see the tabs for the Dashboard and the individual machines added to Cockpit. 
+
+image:Cockpit_UI.png[Cockpit UI]
