small edits following SME review

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2904,23 +2904,28 @@ service evmserverd restart
 
 You can schedule hourly or periodic database maintenance through the appliance console. Performing regular PostgreSQL database maintenance helps to maintain a more responsive {product-title} environment.
 
-Hourly database maintenance tasks such as reindexing is useful for highly active database tables with such as metrics, workers, and servers. 
+Hourly database maintenance tasks, such as reindexing, are useful for highly active database tables such as metrics, workers, and servers. 
 
 You also may want to perform periodic database maintenance to truncate empty metrics tables and reorganize the database. Periodic maintenance can be configured to run hourly, daily, weekly, or monthly, at a specified hour and on a specified day.
+
+[NOTE]
+====
+Periodic maintenance can impact appliance performance while it is running. Red Hat recommends scheduling periodic maintenance infrequently, and at off hours.
+====
 
 To configure hourly and periodic database maintenance:
 
 . Log in to the appliance as the *root* user.
 . Enter `appliance_console`, and press *Enter*.
 . Press any key.
-. Select `10` to configure the automatic database maintenance schedule through a dialog.
+. Select *Configure Database Maintenance* to configure the automatic database maintenance schedule through a dialog.
 .. For *Configure Hourly Database Maintenance?* Type `y` or `n`.
 .. For *Configure Periodic Database Maintenance?* Type `y` or `n`.
 
 The next options depend on the periodic database maintenance frequency you choose, and are specified using the same dialog. The dialog finishes configuration with a *"Database maintenance configuration updated"* message when complete. 
 
-To reset your database maintenance settings, enter *10) Configure Database Maintenance* again from the appliance console menu, and confirm that you want to unconfigure the settings in the configuration dialog to delete the previous settings. 
+To reset your database maintenance settings, enter *Configure Database Maintenance* again from the appliance console menu, and confirm that you want to unconfigure the settings in the configuration dialog. This deletes the current settings. 
 
-To configure a new database maintenance schedule, enter *10) Configure Database Maintenance* once again and configure the values using the dialog.
+To configure a new database maintenance schedule, enter the *Configure Database Maintenance* menu item once again and configure the values using the dialog.
 
 
