--- a/doc-Provisioning_Virtual_Machines_and_Hosts/cfme/master.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Provisioning Virtual Machines and Hosts
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.2-Beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -19,5 +19,6 @@ include::topics/Working_with_Requests.adoc[]
 include::topics/Fulfilling_Requests.adoc[]
 include::topics/Catalogs_and_Services.adoc[]
 include::topics/Retirement.adoc[]
+
 
 
