--- a/art-Assigning_Custom_Analysis_Profile_to_VM/cfme/master.adoc
+++ b/art-Assigning_Custom_Analysis_Profile_to_VM/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Assigning a Custom Analysis Profile to a Virtual Machine
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.2-Beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -25,6 +25,7 @@ include::topics/To_create_VM_control_policy.adoc[]
 include::topics/To_create_policy_profile_and_assign_VM_control_policy.adoc[]
 
 include::topics/To_assign_policy_profile_to_VM.adoc[]
+
 
 
 
