--- a/doc-Deployment_Planning_Guide/cfme/master.adoc
+++ b/doc-Deployment_Planning_Guide/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Deployment Planning Guide
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.2-Beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -16,5 +16,6 @@ include::common/attributes/cfme.adoc[]
 include::topics/introduction.adoc[]
 include::topics/planning.adoc[]
 include::topics/capacity.adoc[]
+
 
 
