--- a/doc-Installing_on_Google_Compute_Engine/cfme/master.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on Google Compute Engine
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.2-Beta
 :toc: left
 :toclevels: 3
 :experimental:
@@ -15,5 +15,6 @@ include::common/attributes/cfme.adoc[]
 :numbered:
 include::topics/installation.adoc[]
 include::topics/configuration.adoc[]
+
 
 
