--- a/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
+++ b/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on Microsoft Azure
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.2-Beta
 :toc: left
 :toclevels: 3
 :experimental:
@@ -15,6 +15,7 @@ include::common/attributes/cfme.adoc[]
 :numbered:
 include::topics/installation.adoc[]
 include::topics/configuration.adoc[]
+
 
 
 
