--- a/doc-Installing_on_VMware_vSphere/cfme/master.adoc
+++ b/doc-Installing_on_VMware_vSphere/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on VMware vSphere
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.2-Beta
 :toc: left
 :toclevels: 3
 :experimental:
@@ -20,6 +20,7 @@ include::/common/configuration.adoc[]
 
 [[Additional_Configuration]]
 include::topics/additional_configuration.adoc[]
+
 
 
 
