--- a/doc-Introduction_to_Self_Service_Portal/cfme/master.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Introduction to the Self Service User Interface
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.2-Beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -18,5 +18,6 @@ include::topics/Dashboard_Tab.adoc[]
 include::topics/My_Services_Tab.adoc[]
 include::topics/My_Requests_Tab.adoc[]
 include::topics/Service_Catalog_Tab.adoc[]
+
 
 
