--- a/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Managing Infrastructure and Inventory
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.2-Beta
 :doctype: book
 :toc: left
 :toclevels: 3
@@ -71,4 +71,5 @@ include::topics/Key_Pair.adoc[]
 
 :leveloffset: 1
 include::topics/Object_Stores.adoc[]
+
 
