--- a/doc-Managing_Providers/cfme/master.adoc
+++ b/doc-Managing_Providers/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Managing Providers
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.2-Beta
 :doctype: book
 :toc: left
 :toclevels: 3
@@ -32,6 +32,7 @@ include::topics/Networking_Providers.adoc[]
 
 :leveloffset: 1
 include::topics/Containers_Providers.adoc[]
+
 
 
 
