More updates to the SSUI guide: Cockpit integration

--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -20,15 +20,20 @@ Cockpit is an interactive Linux server admin interface. You can perform simple a
 
 {product-title} full administrative user interface and the Self Service user interface have enabled for users to click the new Cockpit button image:SSUI_Cockpit-Button.png[Cockpit Button] that opens a new browser window with Cockpit interface for a given virtual machine. 
 
+==== Accessing the Cockpit Interface
+
 [NOTE]
 ====
 Cockpit must be pre-configured and running on the virtual machine. 
 ====
 
-If you get a security warning by the browser, you will need to add this connection to the security exceptions. Click *Advanced → Add Exception → Confirm Security Exception*. After that, you will see the login screen.
+As you can see in the following screen capture of the Self Service user interface, the cockpit button is available next to the HTML 5 console button for a virtual machine instance in the *My Services* tab. 
 
+. Click the *My Services* tab.
+. Click on the required service from the list.
+. Click the Cockpit button image:SSUI_Cockpit-Button.png[Cockpit Button] located next to the HTML 5 console button to open the Cockpit interface for the virtual machine. You will see a notification popping up at the top of the screen, notifying that the console is getting ready to load. 
+image:SSUI_Click-Cockpit-Button.png[Cockpit Button]
+. The Cockpit interface for the virtual machine will open in a new browser window. If you get a security warning by the browser, you will need to add this connection to the security exceptions. Click *Advanced → Add Exception → Confirm Security Exception*. After that, you will see the login screen.
 image:Cockpit_Login.png[Cockpit Login]
-
-Once you have logged in, you will see the tabs for the Dashboard and the individual machines added to Cockpit. 
-
+. Once you have logged in, you will see the tabs for the dashboard and the individual machines added to Cockpit. 
 image:Cockpit_UI.png[Cockpit UI]
