added note on HA, and added an ifdef with a link to a CF reference architecture

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -35,6 +35,17 @@ In this region, we have several {product-title} appliances acting as UI nodes an
 The Region also uses a region database that reports to a master database on the main {product-title} appliance. All appliances can connect to the authentication services (Active Directory, LDAP, Identity Management), outgoing mail (SMTP), and network services (SNMP).
 
 
+[NOTE]
+====
+{product-title} can be configured in a highly available setup. In this case, all PostgreSQL instances must be running on a server that is deployed from the {product-title} appliance. 
+ifdef::cfme[]
+For more information, see the following example reference architecture:
+https://access.redhat.com/articles/1571263[Implementing Highly Available CloudForms Appliances]. Note, this reference architecture was written for a  previous version of CloudForms.
+endif::cfme[]
+====
+
+
+
 [[tenants]]
 === Tenants
 
