Updates to incorporate peer review suggestions

--- a/doc-Introduction_to_Self_Service_Portal/topics/Navigating_Self_Service_UI.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/Navigating_Self_Service_UI.adoc
@@ -10,12 +10,12 @@ The Self Service user interface has a slideout navigation menu on the left that 
 * *Designer*
 * *Administration*  
 
-There are several options in the top-right corner of the user interface, including a shopping cart, notifications banner, and a help option. Besides, you can see the currently logged in LDAP user, for example *Administrator*. As the Self Service user interface supports role-based access control of menus and features, if you are a member of multiple user groups, you can change the acting group by navigating to *_Administrator_* > *Change Group*, then select the new group from the available options in the list.
-
 [NOTE]
 ====
 Clicking on the arrow icon image:SSUI_popout_arrow.png[Popout Arrow] at the top of the user interface will take you to the full administrative user interface login page, in a new browser window/tab.
 ====
+
+There are several options in the top-right corner of the user interface, including a shopping cart, notifications banner, and a help option. Besides that, you can see the current logged in LDAP user, for example, *Administrator*. As the Self Service user interface supports role-based access control of menus and features, if you are a member of multiple user groups, you can change the acting group by navigating to *_Administrator_* > *Change Group*, then select the new group from the available options in the list.
 
 image:SSUI_Change_Group.png[Change Group]
 
