--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -16,7 +16,7 @@ image:SSUI_Custom_Button1.png[]
 
 === Cockpit Integration
 
-Cockpit is an interactive Linux server admin interface. You can perform simple administration tasks such as starting containers, storage administration, network configuration, inspecting logs and so on. While cockpit allows you to monitor and administer several servers at the same time, your browser connects to a primary server that runs the Cockpit web service through which connections to additional servers can be established.
+Cockpit is an interactive Linux server administrative interface. You can perform simple administration tasks such as starting containers, storage administration, network configuration, and inspecting logs. While cockpit allows you to monitor and administer several servers at the same time, your browser connects to a primary server that runs the Cockpit web service through which connections to additional servers can be established.
 
 {product-title} full administrative user interface and the Self Service user interface have enabled for users to click the new Cockpit button image:SSUI_Cockpit-Button.png[Cockpit Button] that opens a new browser window with Cockpit interface for a given virtual machine. 
 
@@ -31,7 +31,7 @@ As you can see in the following screen capture of the Self Service user interfac
 
 . Click the *My Services* tab.
 . Click on the required service from the list.
-. Click the Cockpit button image:SSUI_Cockpit-Button.png[Cockpit Button] located next to the HTML 5 console button to open the Cockpit interface for the virtual machine. You will see a notification popping up at the top of the screen, notifying that the console is getting ready to load. 
+. Click the Cockpit button image:SSUI_Cockpit-Button.png[Cockpit Button] located next to the HTML 5 console button to open the Cockpit interface for the virtual machine. A notification at the top of the screen will appear to show the Cockpit interface is loading. 
 image:SSUI_Click-Cockpit-Button.png[Cockpit Button]
 . The Cockpit interface for the virtual machine will open in a new browser window. If you get a security warning by the browser, you will need to add this connection to the security exceptions. Click *Advanced → Add Exception → Confirm Security Exception*. After that, you will see the login screen.
 image:Cockpit_Login.png[Cockpit Login]
