BZ#1383117 - Copied over changes to the procedure on chargeback settings.

--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
@@ -1,19 +1,34 @@
 [[_to_assign_chargeback_rates]]
+
 === Assigning Chargeback Rates
 
 {product-title} allows you to assign chargeback rates by choosing from *Compute* and *Storage*.
 
 . Navigate to menu:Cloud Intelligence[Chargeback].
-Click the *Assignments* accordion, and click either *Compute* or *Storage*.
+. Click the *Assignments* accordion, and click either *Compute* or *Storage*.
 
+==== Configuring Chargeback for Compute
 
-* Use *Compute* to assign a compute chargeback rate.
-  You can assign chargeback rates to *The Enterprise*, *Selected Clusters*, *Selected Infrastructure Providers*, *Tagged VMs and Instances*, or *Tenants*.
-* Use *Storage* to assign a storage chargeback rate.
-. You can assign chargeback rates to *The Enterprise*, *Selected Datastores*, *Tagged Datastores*, or *Tenants*.
+Use *Compute* to assign a compute chargeback rate.
+You can assign chargeback rates to *The Enterprise*, *Selected Cloud/Infrastructure Providers*, *Selected Clusters/Deployment Roles*, *Selected Containers Providers*, *Tagged VMs and Instances*, *Tagged Images*, or *Tenants*.
+
 . From the *Basic Info* area, use the *Assign To* list to select a type of assignee to assign the rate set to.
-  The options displayed vary based on the type you selected.
-. For each item to set, select the chargeback rate to use.
+. For *Tagged VMs and Instances* and *Tagged Images* select a *Tag Category*.
+. For each item to set, select the chargeback rate to use. The options displayed vary based on the type you select.
+. Click *Save*.
+
+
+
+==== Configuring Chargeback for Storage
+
+Use *Storage* to assign a storage chargeback rate.
+You can assign chargeback rates to *The Enterprise*, *Selected Datastores*, *Tagged Datastores*, or *Tenants*.
+
+
+. From the *Basic Info* area, use the *Assign To* list to select a type of assignee to assign the rate set to.
+. For *Tagged Datastores* select a *Tag Category*.
+. For each item to set, select the chargeback rate to use. The options displayed vary based on the type you select.
+
 . Click *Save*.
 
 The rate is assigned.
@@ -25,4 +40,3 @@ When viewing chargeback, there is a rate for a virtual machine for the number of
 The chargeback for this parameter is calculated based on when the virtual machine is running.
 If the virtual machine is not running, then it is not charged for CPU allocation.
 ====
-
